project1_ht/11613015-project1/syntax.output
State 66 conflicts: 2 shift/reduce
State 67 conflicts: 15 shift/reduce
State 96 conflicts: 2 shift/reduce
State 97 conflicts: 2 shift/reduce
State 98 conflicts: 2 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 101 conflicts: 2 shift/reduce
State 102 conflicts: 2 shift/reduce
State 103 conflicts: 2 shift/reduce
State 104 conflicts: 2 shift/reduce
State 105 conflicts: 2 shift/reduce
State 106 conflicts: 2 shift/reduce
State 107 conflicts: 2 shift/reduce
State 108 conflicts: 2 shift/reduce
State 115 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT ID LC DefList RC
   12                | STRUCT ID

   13 VarDec: ID
   14       | VarDec LB INT RB

   15 FunDec: ID LP VarList RP
   16       | ID LP RP

   17 VarList: ParamDec COMMA VarList
   18        | ParamDec

   19 ParamDec: Specifier VarDec

   20 CompSt: LC DefList StmtList RC

   21 StmtList: Stmt StmtList
   22         | %empty

   23 Stmt: Exp SEMI
   24     | CompSt
   25     | RETURN Exp SEMI
   26     | IF LP Exp RP Stmt
   27     | IF LP Exp RP Stmt ELSE Stmt
   28     | WHILE LP Exp RP Stmt

   29 DefList: Def DefList
   30        | %empty

   31 Def: Specifier DecList SEMI

   32 DecList: Dec
   33        | Dec COMMA DecList

   34 Dec: VarDec
   35    | VarDec ASSIGN Exp

   36 Exp: Exp ASSIGN Exp
   37    | Exp AND Exp
   38    | Exp OR Exp
   39    | Exp LT Exp
   40    | Exp LE Exp
   41    | Exp GT Exp
   42    | Exp GE Exp
   43    | Exp NE Exp
   44    | Exp EQ Exp
   45    | Exp PLUS Exp
   46    | Exp MINUS Exp
   47    | Exp MUL Exp
   48    | Exp DIV Exp
   49    | LP Exp RP
   50    | MINUS Exp
   51    | NOT Exp
   52    | ID LP Args RP
   53    | ID LP RP
   54    | Exp LB Exp LB
   55    | Exp DOT ID
   56    | ID
   57    | INT
   58    | FLOAT
   59    | CHAR
   60    | error

   61 Args: Exp COMMA Args
   62     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 60
TYPE (258) 9
STRUCT (259) 11 12
IF (260) 26 27
ELSE (261) 27
WHILE (262) 28
RETURN (263) 25
INT (264) 14 57
FLOAT (265) 58
CHAR (266) 59
ID (267) 11 12 13 15 16 52 53 55 56
LC (268) 11 20
RC (269) 11 20
ASSIGN (270) 35 36
AND (271) 37
OR (272) 38
LT (273) 39
LE (274) 40
GT (275) 41
GE (276) 42
NE (277) 43
EQ (278) 44
PLUS (279) 45
MINUS (280) 46 50
MUL (281) 47
DIV (282) 48
NOT (283) 51
LP (284) 15 16 26 27 28 49 52 53
RP (285) 15 16 26 27 28 49 52 53
LB (286) 14 54
RB (287) 14
DOT (288) 55
SEMI (289) 4 5 23 25 31
COMMA (290) 8 17 33 61


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
Program (37)
    on left: 1, on right: 0
ExtDefList (38)
    on left: 2 3, on right: 1 2
ExtDef (39)
    on left: 4 5 6, on right: 2
ExtDecList (40)
    on left: 7 8, on right: 4 8
Specifier (41)
    on left: 9 10, on right: 4 5 6 19 31
StructSpecifier (42)
    on left: 11 12, on right: 10
VarDec (43)
    on left: 13 14, on right: 7 8 14 19 34 35
FunDec (44)
    on left: 15 16, on right: 6
VarList (45)
    on left: 17 18, on right: 15 17
ParamDec (46)
    on left: 19, on right: 17 18
CompSt (47)
    on left: 20, on right: 6 24
StmtList (48)
    on left: 21 22, on right: 20 21
Stmt (49)
    on left: 23 24 25 26 27 28, on right: 21 26 27 28
DefList (50)
    on left: 29 30, on right: 11 20 29
Def (51)
    on left: 31, on right: 29
DecList (52)
    on left: 32 33, on right: 31 33
Dec (53)
    on left: 34 35, on right: 32 33
Exp (54)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55 56 57 58 59 60, on right: 23 25 26 27 28 35 36 37 38 39 40
    41 42 43 44 45 46 47 48 49 50 51 54 55 61 62
Args (55)
    on left: 61 62, on right: 52 61


State 0

    0 $accept: . Program $end
    1 Program: . ExtDefList
    2 ExtDefList: . ExtDef ExtDefList
    3           | . %empty  [$end]
    4 ExtDef: . Specifier ExtDecList SEMI
    5       | . Specifier SEMI
    6       | . Specifier FunDec CompSt
    9 Specifier: . TYPE
   10          | . StructSpecifier
   11 StructSpecifier: . STRUCT ID LC DefList RC
   12                | . STRUCT ID

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . ID LC DefList RC
   12                | STRUCT . ID

    ID  shift, and go to state 8


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: . ExtDef ExtDefList
    2           | ExtDef . ExtDefList
    3           | . %empty  [$end]
    4 ExtDef: . Specifier ExtDecList SEMI
    5       | . Specifier SEMI
    6       | . Specifier FunDec CompSt
    9 Specifier: . TYPE
   10          | . StructSpecifier
   11 StructSpecifier: . STRUCT ID LC DefList RC
   12                | . STRUCT ID

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7 ExtDecList: . VarDec
    8           | . VarDec COMMA ExtDecList
   13 VarDec: . ID
   14       | . VarDec LB INT RB
   15 FunDec: . ID LP VarList RP
   16       | . ID LP RP

    ID    shift, and go to state 11
    SEMI  shift, and go to state 12

    ExtDecList  go to state 13
    VarDec      go to state 14
    FunDec      go to state 15


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   11 StructSpecifier: STRUCT ID . LC DefList RC
   12                | STRUCT ID .  [ID, SEMI]

    LC  shift, and go to state 16

    $default  reduce using rule 12 (StructSpecifier)


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 11

   13 VarDec: ID .  [LB, SEMI, COMMA]
   15 FunDec: ID . LP VarList RP
   16       | ID . LP RP

    LP  shift, and go to state 17

    $default  reduce using rule 13 (VarDec)


State 12

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 13

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 18


State 14

    7 ExtDecList: VarDec .  [SEMI]
    8           | VarDec . COMMA ExtDecList
   14 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 19
    COMMA  shift, and go to state 20

    $default  reduce using rule 7 (ExtDecList)


State 15

    6 ExtDef: Specifier FunDec . CompSt
   20 CompSt: . LC DefList StmtList RC

    LC  shift, and go to state 21

    CompSt  go to state 22


State 16

    9 Specifier: . TYPE
   10          | . StructSpecifier
   11 StructSpecifier: . STRUCT ID LC DefList RC
   11                | STRUCT ID LC . DefList RC
   12                | . STRUCT ID
   29 DefList: . Def DefList
   30        | . %empty  [RC]
   31 Def: . Specifier DecList SEMI

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 30 (DefList)

    Specifier        go to state 23
    StructSpecifier  go to state 7
    DefList          go to state 24
    Def              go to state 25


State 17

    9 Specifier: . TYPE
   10          | . StructSpecifier
   11 StructSpecifier: . STRUCT ID LC DefList RC
   12                | . STRUCT ID
   15 FunDec: ID LP . VarList RP
   16       | ID LP . RP
   17 VarList: . ParamDec COMMA VarList
   18        | . ParamDec
   19 ParamDec: . Specifier VarDec

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 26

    Specifier        go to state 27
    StructSpecifier  go to state 7
    VarList          go to state 28
    ParamDec         go to state 29


State 18

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 19

   14 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 30


State 20

    7 ExtDecList: . VarDec
    8           | . VarDec COMMA ExtDecList
    8           | VarDec COMMA . ExtDecList
   13 VarDec: . ID
   14       | . VarDec LB INT RB

    ID  shift, and go to state 31

    ExtDecList  go to state 32
    VarDec      go to state 14


State 21

    9 Specifier: . TYPE
   10          | . StructSpecifier
   11 StructSpecifier: . STRUCT ID LC DefList RC
   12                | . STRUCT ID
   20 CompSt: LC . DefList StmtList RC
   29 DefList: . Def DefList
   30        | . %empty  [error, IF, WHILE, RETURN, INT, FLOAT, CHAR, ID, LC, RC, MINUS, NOT, LP]
   31 Def: . Specifier DecList SEMI

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 30 (DefList)

    Specifier        go to state 23
    StructSpecifier  go to state 7
    DefList          go to state 33
    Def              go to state 25


State 22

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 23

   13 VarDec: . ID
   14       | . VarDec LB INT RB
   31 Def: Specifier . DecList SEMI
   32 DecList: . Dec
   33        | . Dec COMMA DecList
   34 Dec: . VarDec
   35    | . VarDec ASSIGN Exp

    ID  shift, and go to state 31

    VarDec   go to state 34
    DecList  go to state 35
    Dec      go to state 36


State 24

   11 StructSpecifier: STRUCT ID LC DefList . RC

    RC  shift, and go to state 37


State 25

    9 Specifier: . TYPE
   10          | . StructSpecifier
   11 StructSpecifier: . STRUCT ID LC DefList RC
   12                | . STRUCT ID
   29 DefList: . Def DefList
   29        | Def . DefList
   30        | . %empty  [error, IF, WHILE, RETURN, INT, FLOAT, CHAR, ID, LC, RC, MINUS, NOT, LP]
   31 Def: . Specifier DecList SEMI

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 30 (DefList)

    Specifier        go to state 23
    StructSpecifier  go to state 7
    DefList          go to state 38
    Def              go to state 25


State 26

   16 FunDec: ID LP RP .

    $default  reduce using rule 16 (FunDec)


State 27

   13 VarDec: . ID
   14       | . VarDec LB INT RB
   19 ParamDec: Specifier . VarDec

    ID  shift, and go to state 31

    VarDec  go to state 39


State 28

   15 FunDec: ID LP VarList . RP

    RP  shift, and go to state 40


State 29

   17 VarList: ParamDec . COMMA VarList
   18        | ParamDec .  [RP]

    COMMA  shift, and go to state 41

    $default  reduce using rule 18 (VarList)


State 30

   14 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 42


State 31

   13 VarDec: ID .

    $default  reduce using rule 13 (VarDec)


State 32

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 33

   20 CompSt: . LC DefList StmtList RC
   20       | LC DefList . StmtList RC
   21 StmtList: . Stmt StmtList
   22         | . %empty  [RC]
   23 Stmt: . Exp SEMI
   24     | . CompSt
   25     | . RETURN Exp SEMI
   26     | . IF LP Exp RP Stmt
   27     | . IF LP Exp RP Stmt ELSE Stmt
   28     | . WHILE LP Exp RP Stmt
   36 Exp: . Exp ASSIGN Exp
   37    | . Exp AND Exp
   38    | . Exp OR Exp
   39    | . Exp LT Exp
   40    | . Exp LE Exp
   41    | . Exp GT Exp
   42    | . Exp GE Exp
   43    | . Exp NE Exp
   44    | . Exp EQ Exp
   45    | . Exp PLUS Exp
   46    | . Exp MINUS Exp
   47    | . Exp MUL Exp
   48    | . Exp DIV Exp
   49    | . LP Exp RP
   50    | . MINUS Exp
   51    | . NOT Exp
   52    | . ID LP Args RP
   53    | . ID LP RP
   54    | . Exp LB Exp LB
   55    | . Exp DOT ID
   56    | . ID
   57    | . INT
   58    | . FLOAT
   59    | . CHAR
   60    | . error

    error   shift, and go to state 43
    IF      shift, and go to state 44
    WHILE   shift, and go to state 45
    RETURN  shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    CHAR    shift, and go to state 49
    ID      shift, and go to state 50
    LC      shift, and go to state 21
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53

    RC  reduce using rule 22 (StmtList)

    CompSt    go to state 54
    StmtList  go to state 55
    Stmt      go to state 56
    Exp       go to state 57


State 34

   14 VarDec: VarDec . LB INT RB
   34 Dec: VarDec .  [SEMI, COMMA]
   35    | VarDec . ASSIGN Exp

    ASSIGN  shift, and go to state 58
    LB      shift, and go to state 19

    $default  reduce using rule 34 (Dec)


State 35

   31 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 59


State 36

   32 DecList: Dec .  [SEMI]
   33        | Dec . COMMA DecList

    COMMA  shift, and go to state 60

    $default  reduce using rule 32 (DecList)


State 37

   11 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 38

   29 DefList: Def DefList .

    $default  reduce using rule 29 (DefList)


State 39

   14 VarDec: VarDec . LB INT RB
   19 ParamDec: Specifier VarDec .  [RP, COMMA]

    LB  shift, and go to state 19

    $default  reduce using rule 19 (ParamDec)


State 40

   15 FunDec: ID LP VarList RP .

    $default  reduce using rule 15 (FunDec)


State 41

    9 Specifier: . TYPE
   10          | . StructSpecifier
   11 StructSpecifier: . STRUCT ID LC DefList RC
   12                | . STRUCT ID
   17 VarList: . ParamDec COMMA VarList
   17        | ParamDec COMMA . VarList
   18        | . ParamDec
   19 ParamDec: . Specifier VarDec

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 27
    StructSpecifier  go to state 7
    VarList          go to state 61
    ParamDec         go to state 29


State 42

   14 VarDec: VarDec LB INT RB .

    $default  reduce using rule 14 (VarDec)


State 43

   60 Exp: error .

    $default  reduce using rule 60 (Exp)


State 44

   26 Stmt: IF . LP Exp RP Stmt
   27     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 62


State 45

   28 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 63


State 46

   25 Stmt: RETURN . Exp SEMI
   36 Exp: . Exp ASSIGN Exp
   37    | . Exp AND Exp
   38    | . Exp OR Exp
   39    | . Exp LT Exp
   40    | . Exp LE Exp
   41    | . Exp GT Exp
   42    | . Exp GE Exp
   43    | . Exp NE Exp
   44    | . Exp EQ Exp
   45    | . Exp PLUS Exp
   46    | . Exp MINUS Exp
   47    | . Exp MUL Exp
   48    | . Exp DIV Exp
   49    | . LP Exp RP
   50    | . MINUS Exp
   51    | . NOT Exp
   52    | . ID LP Args RP
   53    | . ID LP RP
   54    | . Exp LB Exp LB
   55    | . Exp DOT ID
   56    | . ID
   57    | . INT
   58    | . FLOAT
   59    | . CHAR
   60    | . error

    error  shift, and go to state 43
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    CHAR   shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 64


State 47

   57 Exp: INT .

    $default  reduce using rule 57 (Exp)


State 48

   58 Exp: FLOAT .

    $default  reduce using rule 58 (Exp)


State 49

   59 Exp: CHAR .

    $default  reduce using rule 59 (Exp)


State 50

   52 Exp: ID . LP Args RP
   53    | ID . LP RP
   56    | ID .  [ASSIGN, AND, OR, LT, LE, GT, GE, NE, EQ, PLUS, MINUS, MUL, DIV, RP, LB, DOT, SEMI, COMMA]

    LP  shift, and go to state 65

    $default  reduce using rule 56 (Exp)


State 51

   36 Exp: . Exp ASSIGN Exp
   37    | . Exp AND Exp
   38    | . Exp OR Exp
   39    | . Exp LT Exp
   40    | . Exp LE Exp
   41    | . Exp GT Exp
   42    | . Exp GE Exp
   43    | . Exp NE Exp
   44    | . Exp EQ Exp
   45    | . Exp PLUS Exp
   46    | . Exp MINUS Exp
   47    | . Exp MUL Exp
   48    | . Exp DIV Exp
   49    | . LP Exp RP
   50    | . MINUS Exp
   50    | MINUS . Exp
   51    | . NOT Exp
   52    | . ID LP Args RP
   53    | . ID LP RP
   54    | . Exp LB Exp LB
   55    | . Exp DOT ID
   56    | . ID
   57    | . INT
   58    | . FLOAT
   59    | . CHAR
   60    | . error

    error  shift, and go to state 43
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    CHAR   shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 66


State 52

   36 Exp: . Exp ASSIGN Exp
   37    | . Exp AND Exp
   38    | . Exp OR Exp
   39    | . Exp LT Exp
   40    | . Exp LE Exp
   41    | . Exp GT Exp
   42    | . Exp GE Exp
   43    | . Exp NE Exp
   44    | . Exp EQ Exp
   45    | . Exp PLUS Exp
   46    | . Exp MINUS Exp
   47    | . Exp MUL Exp
   48    | . Exp DIV Exp
   49    | . LP Exp RP
   50    | . MINUS Exp
   51    | . NOT Exp
   51    | NOT . Exp
   52    | . ID LP Args RP
   53    | . ID LP RP
   54    | . Exp LB Exp LB
   55    | . Exp DOT ID
   56    | . ID
   57    | . INT
   58    | . FLOAT
   59    | . CHAR
   60    | . error

    error  shift, and go to state 43
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    CHAR   shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 67


State 53

   36 Exp: . Exp ASSIGN Exp
   37    | . Exp AND Exp
   38    | . Exp OR Exp
   39    | . Exp LT Exp
   40    | . Exp LE Exp
   41    | . Exp GT Exp
   42    | . Exp GE Exp
   43    | . Exp NE Exp
   44    | . Exp EQ Exp
   45    | . Exp PLUS Exp
   46    | . Exp MINUS Exp
   47    | . Exp MUL Exp
   48    | . Exp DIV Exp
   49    | . LP Exp RP
   49    | LP . Exp RP
   50    | . MINUS Exp
   51    | . NOT Exp
   52    | . ID LP Args RP
   53    | . ID LP RP
   54    | . Exp LB Exp LB
   55    | . Exp DOT ID
   56    | . ID
   57    | . INT
   58    | . FLOAT
   59    | . CHAR
   60    | . error

    error  shift, and go to state 43
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    CHAR   shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 68


State 54

   24 Stmt: CompSt .

    $default  reduce using rule 24 (Stmt)


State 55

   20 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 69


State 56

   20 CompSt: . LC DefList StmtList RC
   21 StmtList: . Stmt StmtList
   21         | Stmt . StmtList
   22         | . %empty  [RC]
   23 Stmt: . Exp SEMI
   24     | . CompSt
   25     | . RETURN Exp SEMI
   26     | . IF LP Exp RP Stmt
   27     | . IF LP Exp RP Stmt ELSE Stmt
   28     | . WHILE LP Exp RP Stmt
   36 Exp: . Exp ASSIGN Exp
   37    | . Exp AND Exp
   38    | . Exp OR Exp
   39    | . Exp LT Exp
   40    | . Exp LE Exp
   41    | . Exp GT Exp
   42    | . Exp GE Exp
   43    | . Exp NE Exp
   44    | . Exp EQ Exp
   45    | . Exp PLUS Exp
   46    | . Exp MINUS Exp
   47    | . Exp MUL Exp
   48    | . Exp DIV Exp
   49    | . LP Exp RP
   50    | . MINUS Exp
   51    | . NOT Exp
   52    | . ID LP Args RP
   53    | . ID LP RP
   54    | . Exp LB Exp LB
   55    | . Exp DOT ID
   56    | . ID
   57    | . INT
   58    | . FLOAT
   59    | . CHAR
   60    | . error

    error   shift, and go to state 43
    IF      shift, and go to state 44
    WHILE   shift, and go to state 45
    RETURN  shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    CHAR    shift, and go to state 49
    ID      shift, and go to state 50
    LC      shift, and go to state 21
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53

    RC  reduce using rule 22 (StmtList)

    CompSt    go to state 54
    StmtList  go to state 70
    Stmt      go to state 56
    Exp       go to state 57


State 57

   23 Stmt: Exp . SEMI
   36 Exp: Exp . ASSIGN Exp
   37    | Exp . AND Exp
   38    | Exp . OR Exp
   39    | Exp . LT Exp
   40    | Exp . LE Exp
   41    | Exp . GT Exp
   42    | Exp . GE Exp
   43    | Exp . NE Exp
   44    | Exp . EQ Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . MUL Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp LB
   55    | Exp . DOT ID

    ASSIGN  shift, and go to state 71
    AND     shift, and go to state 72
    OR      shift, and go to state 73
    LT      shift, and go to state 74
    LE      shift, and go to state 75
    GT      shift, and go to state 76
    GE      shift, and go to state 77
    NE      shift, and go to state 78
    EQ      shift, and go to state 79
    PLUS    shift, and go to state 80
    MINUS   shift, and go to state 81
    MUL     shift, and go to state 82
    DIV     shift, and go to state 83
    LB      shift, and go to state 84
    DOT     shift, and go to state 85
    SEMI    shift, and go to state 86


State 58

   35 Dec: VarDec ASSIGN . Exp
   36 Exp: . Exp ASSIGN Exp
   37    | . Exp AND Exp
   38    | . Exp OR Exp
   39    | . Exp LT Exp
   40    | . Exp LE Exp
   41    | . Exp GT Exp
   42    | . Exp GE Exp
   43    | . Exp NE Exp
   44    | . Exp EQ Exp
   45    | . Exp PLUS Exp
   46    | . Exp MINUS Exp
   47    | . Exp MUL Exp
   48    | . Exp DIV Exp
   49    | . LP Exp RP
   50    | . MINUS Exp
   51    | . NOT Exp
   52    | . ID LP Args RP
   53    | . ID LP RP
   54    | . Exp LB Exp LB
   55    | . Exp DOT ID
   56    | . ID
   57    | . INT
   58    | . FLOAT
   59    | . CHAR
   60    | . error

    error  shift, and go to state 43
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    CHAR   shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 87


State 59

   31 Def: Specifier DecList SEMI .

    $default  reduce using rule 31 (Def)


State 60

   13 VarDec: . ID
   14       | . VarDec LB INT RB
   32 DecList: . Dec
   33        | . Dec COMMA DecList
   33        | Dec COMMA . DecList
   34 Dec: . VarDec
   35    | . VarDec ASSIGN Exp

    ID  shift, and go to state 31

    VarDec   go to state 34
    DecList  go to state 88
    Dec      go to state 36


State 61

   17 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 17 (VarList)


State 62

   26 Stmt: IF LP . Exp RP Stmt
   27     | IF LP . Exp RP Stmt ELSE Stmt
   36 Exp: . Exp ASSIGN Exp
   37    | . Exp AND Exp
   38    | . Exp OR Exp
   39    | . Exp LT Exp
   40    | . Exp LE Exp
   41    | . Exp GT Exp
   42    | . Exp GE Exp
   43    | . Exp NE Exp
   44    | . Exp EQ Exp
   45    | . Exp PLUS Exp
   46    | . Exp MINUS Exp
   47    | . Exp MUL Exp
   48    | . Exp DIV Exp
   49    | . LP Exp RP
   50    | . MINUS Exp
   51    | . NOT Exp
   52    | . ID LP Args RP
   53    | . ID LP RP
   54    | . Exp LB Exp LB
   55    | . Exp DOT ID
   56    | . ID
   57    | . INT
   58    | . FLOAT
   59    | . CHAR
   60    | . error

    error  shift, and go to state 43
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    CHAR   shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 89


State 63

   28 Stmt: WHILE LP . Exp RP Stmt
   36 Exp: . Exp ASSIGN Exp
   37    | . Exp AND Exp
   38    | . Exp OR Exp
   39    | . Exp LT Exp
   40    | . Exp LE Exp
   41    | . Exp GT Exp
   42    | . Exp GE Exp
   43    | . Exp NE Exp
   44    | . Exp EQ Exp
   45    | . Exp PLUS Exp
   46    | . Exp MINUS Exp
   47    | . Exp MUL Exp
   48    | . Exp DIV Exp
   49    | . LP Exp RP
   50    | . MINUS Exp
   51    | . NOT Exp
   52    | . ID LP Args RP
   53    | . ID LP RP
   54    | . Exp LB Exp LB
   55    | . Exp DOT ID
   56    | . ID
   57    | . INT
   58    | . FLOAT
   59    | . CHAR
   60    | . error

    error  shift, and go to state 43
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    CHAR   shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 90


State 64

   25 Stmt: RETURN Exp . SEMI
   36 Exp: Exp . ASSIGN Exp
   37    | Exp . AND Exp
   38    | Exp . OR Exp
   39    | Exp . LT Exp
   40    | Exp . LE Exp
   41    | Exp . GT Exp
   42    | Exp . GE Exp
   43    | Exp . NE Exp
   44    | Exp . EQ Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . MUL Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp LB
   55    | Exp . DOT ID

    ASSIGN  shift, and go to state 71
    AND     shift, and go to state 72
    OR      shift, and go to state 73
    LT      shift, and go to state 74
    LE      shift, and go to state 75
    GT      shift, and go to state 76
    GE      shift, and go to state 77
    NE      shift, and go to state 78
    EQ      shift, and go to state 79
    PLUS    shift, and go to state 80
    MINUS   shift, and go to state 81
    MUL     shift, and go to state 82
    DIV     shift, and go to state 83
    LB      shift, and go to state 84
    DOT     shift, and go to state 85
    SEMI    shift, and go to state 91


State 65

   36 Exp: . Exp ASSIGN Exp
   37    | . Exp AND Exp
   38    | . Exp OR Exp
   39    | . Exp LT Exp
   40    | . Exp LE Exp
   41    | . Exp GT Exp
   42    | . Exp GE Exp
   43    | . Exp NE Exp
   44    | . Exp EQ Exp
   45    | . Exp PLUS Exp
   46    | . Exp MINUS Exp
   47    | . Exp MUL Exp
   48    | . Exp DIV Exp
   49    | . LP Exp RP
   50    | . MINUS Exp
   51    | . NOT Exp
   52    | . ID LP Args RP
   52    | ID LP . Args RP
   53    | . ID LP RP
   53    | ID LP . RP
   54    | . Exp LB Exp LB
   55    | . Exp DOT ID
   56    | . ID
   57    | . INT
   58    | . FLOAT
   59    | . CHAR
   60    | . error
   61 Args: . Exp COMMA Args
   62     | . Exp

    error  shift, and go to state 43
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    CHAR   shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 92

    Exp   go to state 93
    Args  go to state 94


State 66

   36 Exp: Exp . ASSIGN Exp
   37    | Exp . AND Exp
   38    | Exp . OR Exp
   39    | Exp . LT Exp
   40    | Exp . LE Exp
   41    | Exp . GT Exp
   42    | Exp . GE Exp
   43    | Exp . NE Exp
   44    | Exp . EQ Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . MUL Exp
   48    | Exp . DIV Exp
   50    | MINUS Exp .  [ASSIGN, AND, OR, LT, LE, GT, GE, NE, EQ, PLUS, MINUS, RP, LB, DOT, SEMI, COMMA]
   54    | Exp . LB Exp LB
   55    | Exp . DOT ID

    MUL  shift, and go to state 82
    DIV  shift, and go to state 83
    LB   shift, and go to state 84
    DOT  shift, and go to state 85

    LB        [reduce using rule 50 (Exp)]
    DOT       [reduce using rule 50 (Exp)]
    $default  reduce using rule 50 (Exp)

    Conflict between rule 50 and token ASSIGN resolved as reduce (ASSIGN < MINUS).
    Conflict between rule 50 and token AND resolved as reduce (AND < MINUS).
    Conflict between rule 50 and token OR resolved as reduce (OR < MINUS).
    Conflict between rule 50 and token LT resolved as reduce (LT < MINUS).
    Conflict between rule 50 and token LE resolved as reduce (LE < MINUS).
    Conflict between rule 50 and token GT resolved as reduce (GT < MINUS).
    Conflict between rule 50 and token GE resolved as reduce (GE < MINUS).
    Conflict between rule 50 and token NE resolved as reduce (NE < MINUS).
    Conflict between rule 50 and token EQ resolved as reduce (EQ < MINUS).
    Conflict between rule 50 and token PLUS resolved as reduce (%left PLUS).
    Conflict between rule 50 and token MINUS resolved as reduce (%left MINUS).
    Conflict between rule 50 and token MUL resolved as shift (MINUS < MUL).
    Conflict between rule 50 and token DIV resolved as shift (MINUS < DIV).


State 67
